[gd_scene load_steps=4 format=3 uid="uid://b4lg348ba2oki"]

[ext_resource type="FontFile" uid="uid://c6wydwtikx8v6" path="res://assets/fonts/Round9x13.ttf" id="1_3k1vl"]
[ext_resource type="Script" uid="uid://3ysxqe5qes1m" path="res://stages/quiz_world/quiz_world.gd" id="1_3pl2b"]
[ext_resource type="PackedScene" uid="uid://dch063htskbhx" path="res://ui/hud/juicy_bar/juicy_bar.tscn" id="2_3pl2b"]

[node name="QuizWorld" type="Node2D"]
script = ExtResource("1_3pl2b")

[node name="JuicyBar" parent="." instance=ExtResource("2_3pl2b")]
offset_left = 332.0
offset_top = 416.0
offset_right = 332.0
offset_bottom = 416.0
scale = Vector2(1, 0.5)

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 185.0
offset_top = 483.0
offset_right = 462.0
offset_bottom = 551.0
theme_override_fonts/font = ExtResource("1_3k1vl")
theme_override_font_sizes/font_size = 48
text = "66 + 33"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Marker2DLeft" type="Marker2D" parent="."]
position = Vector2(180, 612)

[node name="Marker2DRight" type="Marker2D" parent="."]
position = Vector2(450, 612)

[node name="Marker2DMid" type="Marker2D" parent="."]
position = Vector2(315, 652)

[node name="SheepGroup" type="Node2D" parent="." groups=["sheep"]]

[node name="DecreaseTimer" type="Timer" parent="."]
autostart = true
